set double spacing

--- a/preamble.tex
+++ b/preamble.tex
@@ -49,7 +49,8 @@
 \usepackage{titlesec}
 \usepackage[width={autoauto}]{thumbs}
 
-\onehalfspacing
+%\onehalfspacing
+\doublespacing
 
 % Use symbols instead of numbers for footnote marks
 %
